--- a/To Do List/Base.lproj/Main.storyboard
+++ b/To Do List/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="RT6-lG-Bxr" id="MTz-vt-mK2"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="What's up" id="DCY-jP-KxK"/>
+                    <navigationItem key="navigationItem" title="What's up" id="DCY-jP-KxK">
+                        <barButtonItem key="rightBarButtonItem" title="+" id="kLV-CI-uXo">
+                            <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addPressed:" destination="RT6-lG-Bxr" id="hHo-WD-jPl"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aVJ-N0-IfM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
